# tuiflow

./: Cargo.toml  LICENSE  README.md
docs/: README.md
docs/design/: graph_canvas.md  roadmap.md
docs/references/: tuigram.md
examples/: showcase.rs
examples/snapshots/: showcase__tests__showcase_renders_editor_inside_bounded_center_pane.snap
src/: document.rs  editor.rs  input.rs  layout.rs  lib.rs  render.rs  shell.rs  showcase.rs  theme.rs
src/snapshots/: tui_dnd__render__tests__renders_clipped_subrect_snapshot.snap  tui_dnd__render__tests__renders_selected_node_snapshot.snap  tui_dnd__showcase__tests__showcase_renders_editor_inside_bounded_center_pane.snap  tuiflow__render__tests__renders_selected_node_snapshot.snap
