[package]
name = "tuiflow"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "ratatui flow diagram editor library"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
unicode-width = "0.2"

[dev-dependencies]
insta = "1.43"
serde_json = "1.0"
